force-app/main/default/objects/Work_Task__c/Work_Task__c.object-meta.xml
<CustomObject>
    <label>Work Task</label>
    <nameField>
        <displayFormat>WT-{0000}</displayFormat>
        <label>Work Task #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>