force-app/main/default/objects/Work_Task__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; +   Work_Order__r.WD_Asset__c  , Work_Order__r.WD_Asset__r.Name, &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset #</label>
    <type>Text</type>
</CustomField>