force-app/main/default/objects/Work_Task__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Assigned To</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Employees__c.RecordType.Name</field>
            <operation>notEqual</operation>
            <value>Inactive Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Work Tasks</relationshipLabel>
    <relationshipName>Job_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>