force-app/main/default/objects/Work_Task__c/fields/Category_of_Work_Task__c.field-meta.xml
<CustomField>
    <fullName>Category_of_Work_Task__c</fullName>
    <label>Category of Work Task</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wheels</fullName>
            </value>
            <value>
                <fullName>Lights</fullName>
            </value>
            <value>
                <fullName>Windscreen/Window</fullName>
            </value>
            <value>
                <fullName>Air Conditioning</fullName>
            </value>
            <value>
                <fullName>Engine</fullName>
            </value>
            <value>
                <fullName>Drive Line</fullName>
            </value>
            <value>
                <fullName>Vehicle Interior</fullName>
            </value>
            <value>
                <fullName>Suspension</fullName>
            </value>
            <value>
                <fullName>Brakes</fullName>
            </value>
            <value>
                <fullName>Oilfield Equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>