force-app/main/default/objects/Work_Task__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>Provide any relevant information relating to the work task</inlineHelpText>
    <label>Progress/Completion Details</label>
    <type>TextArea</type>
</CustomField>