force-app/main/default/objects/Work_Task__c/fields/Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Completed__c</fullName>
    <inlineHelpText>Date that Work Task is actually completed</inlineHelpText>
    <label>Date Completed</label>
    <type>Date</type>
</CustomField>