force-app/main/default/objects/Work_Task__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>Date Work Task was completed.  Status updated to Completed</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>