force-app/main/default/objects/Work_Task__c/fields/Finish_Time__c.field-meta.xml
<CustomField>
    <fullName>Finish_Time__c</fullName>
    <label>Finish Time</label>
    <type>Time</type>
</CustomField>