force-app/main/default/objects/Work_Task__c/fields/Grading__c.field-meta.xml
<CustomField>
    <fullName>Grading__c</fullName>
    <inlineHelpText>Normal (1-14 days)
Urgent (1-7 days)
Not Roadworthy (Do Not Use)</inlineHelpText>
    <label>Grading</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Urgent</fullName>
            </value>
            <value>
                <fullName>Not Roadworthy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>