force-app/main/default/objects/Work_Task__c/fields/Hours_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Hours_of_Work__c</fullName>
    <label>Hours of Work</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>