force-app/main/default/objects/Work_Task__c/fields/Relevant_Dept__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Dept__c</fullName>
    <formula>TEXT(Work_Order__r.Relevant_Dept__c)</formula>
    <label>Dept</label>
    <type>Text</type>
</CustomField>