force-app/main/default/objects/Work_Task__c/fields/Start_date__c.field-meta.xml
<CustomField>
    <fullName>Start_date__c</fullName>
    <inlineHelpText>Date Work Task was started.  Change Status to In Progress</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>