force-app/main/default/objects/Work_Task__c/fields/Status_of_Work_Task__c.field-meta.xml
<CustomField>
    <fullName>Status_of_Work_Task__c</fullName>
    <label>Status of Work Task</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>