force-app/main/default/objects/Work_Task__c/fields/Travel_Details_if_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Travel_Details_if_Applicable__c</fullName>
    <label>Travel Details (if Applicable)</label>
    <type>TextArea</type>
</CustomField>