force-app/main/default/objects/Work_Task__c/fields/Travel_Time__c.field-meta.xml
<CustomField>
    <fullName>Travel_Time__c</fullName>
    <label>Travel Time</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>