force-app/main/default/objects/Work_Task__c/fields/WD_Unit__c.field-meta.xml
<CustomField>
    <fullName>WD_Unit__c</fullName>
    <formula>Work_Order__r.Unit_of_Asset__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WD Unit</label>
    <type>Text</type>
</CustomField>