force-app/main/default/objects/Work_Task__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <label>Work Order #</label>
    <referenceTo>Job_Cards__c</referenceTo>
    <relationshipLabel>Work Tasks</relationshipLabel>
    <relationshipName>Job_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>