force-app/main/default/objects/Work_Task__c/fields/Work_Order_Action__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Action__c</fullName>
    <formula>text(Work_Order__r.Action__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Order Action</label>
    <type>Text</type>
</CustomField>