force-app/main/default/objects/Work_Task__c/fields/Work_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Status__c</fullName>
    <description>Status of the related Work Order</description>
    <formula>TEXT(Work_Order__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>See related work order</inlineHelpText>
    <label>Work Order Status</label>
    <type>Text</type>
</CustomField>