force-app/main/default/objects/Work_Task__c/fields/Work_Task__c.field-meta.xml
<CustomField>
    <fullName>Work_Task__c</fullName>
    <inlineHelpText>Provide Description of the Task that is to be completed by the Assigned To person</inlineHelpText>
    <label>Assigned Work Task</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>