force-app/main/default/objects/Work_Task__c/listViews/In_Action_Auto_Elec.listView-meta.xml
<ListView>
    <fullName>In_Action_Auto_Elec</fullName>
    <columns>NAME</columns>
    <columns>WD_Unit__c</columns>
    <columns>Asset__c</columns>
    <columns>Work_Task__c</columns>
    <columns>Relevant_Dept__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Start_date__c</columns>
    <columns>Comments__c</columns>
    <columns>Date_Completed__c</columns>
    <columns>Status_of_Work_Task__c</columns>
    <columns>Work_Order__c</columns>
    <columns>Work_Order_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2019 12:00 AM</value>
    </filters>
    <filters>
        <field>Status_of_Work_Task__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>Work_Order_Action__c</field>
        <operation>equals</operation>
        <value>action,completed</value>
    </filters>
    <filters>
        <field>WD_Unit__c</field>
        <operation>equals</operation>
        <value>Depot - Roma,base camp - roma,transport - roma,rig 26,rig 34</value>
    </filters>
    <filters>
        <field>Relevant_Dept__c</field>
        <operation>equals</operation>
        <value>HV - Auto Elec - Roma,Auto Electrician - Roma</value>
    </filters>
    <label>In Action | Auto Elec</label>
    <sharedTo>
        <group>Finance</group>
        <group>Mechanics_Roma</group>
        <group>OPs_super</group>
        <group>Projects_and_Maintenance</group>
        <group>Safety</group>
    </sharedTo>
</ListView>