force-app/main/default/objects/Work_Task__c/listViews/In_Action_Rig_20.listView-meta.xml
<ListView>
    <fullName>In_Action_Rig_20</fullName>
    <columns>NAME</columns>
    <columns>Asset__c</columns>
    <columns>Work_Task__c</columns>
    <columns>Relevant_Dept__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Start_date__c</columns>
    <columns>Comments__c</columns>
    <columns>Date_Completed__c</columns>
    <columns>Status_of_Work_Task__c</columns>
    <columns>Work_Order__c</columns>
    <columns>Work_Order_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2019 12:00 AM</value>
    </filters>
    <filters>
        <field>Status_of_Work_Task__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>Work_Order_Action__c</field>
        <operation>equals</operation>
        <value>action,completed</value>
    </filters>
    <filters>
        <field>WD_Unit__c</field>
        <operation>equals</operation>
        <value>Rig 20</value>
    </filters>
    <label>In Action | Rig 20</label>
    <sharedTo>
        <group>Electrician</group>
        <group>Fabrication</group>
        <group>Finance</group>
        <group>Mechanics_Roma</group>
        <group>Safety</group>
    </sharedTo>
</ListView>