force-app/main/default/objects/Work_Task__c/listViews/Open_Work_Tasks_Closed_WO.listView-meta.xml
<ListView>
    <fullName>Open_Work_Tasks_Closed_WO</fullName>
    <columns>NAME</columns>
    <columns>WD_Unit__c</columns>
    <columns>Asset__c</columns>
    <columns>Start_date__c</columns>
    <columns>Work_Task__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Comments__c</columns>
    <columns>Status_of_Work_Task__c</columns>
    <columns>Work_Order__c</columns>
    <columns>Work_Order_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Date_Completed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status_of_Work_Task__c</field>
        <operation>equals</operation>
        <value>Open,Closed</value>
    </filters>
    <filters>
        <field>Work_Order_Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>All Work Tasks Open [WO Complete]</label>
    <sharedTo>
        <group>Finance</group>
        <group>Safety</group>
    </sharedTo>
</ListView>